feat: kanban board add sort order and sort by drag and drop
